@@ -183,4 +183,12 @@ https://finance.yahoo.com/connection/currency-converter-cache?date=20150307
 15/05/2017
 *VectMomentum.py
 - Change from Yahoo finance data to Oanda for intraday data
+Current problem: 
+- Oanda data identify itself as object, not DataFrame
+- Need to reformat time
 
+*statisticaltest.py
+- Adds MDD
+
+*hist.py
+- Group the code into methods
